k8/production/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpop-analysis-redis-service
  namespace: analysis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
