k8/production/redis-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpop-analysis-redis-tcp-service
  namespace: analysis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
