k8/production/tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpop-analysis-tcp
  namespace: analysis
  labels:
    app: alpop-analysis-tcp
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
