k8/production/gcp_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ativa-idoso-api-ingress
  namespace: analysis
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: ativa-idoso-api-cert
spec:
  rules:
  - host: analysis.alpop.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ativa-idoso-api-tcp
            port:
              number: 80
